; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_spi.c_SPIIntRegister.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_spi.c_SPIIntRegister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SPIIntRegister(i64 %0, void ()* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca void ()*, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store void ()* %1, void ()** %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = call i64 @SPIIntNumberGet(i64 %6)
  store i64 %7, i64* %5, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load void ()*, void ()** %4, align 8
  %10 = bitcast void ()* %9 to void (...)*
  %11 = call i32 @IntRegister(i64 %8, void (...)* %10)
  %12 = load i64, i64* %5, align 8
  %13 = call i32 @IntEnable(i64 %12)
  ret void
}

declare dso_local i64 @SPIIntNumberGet(i64) #1

declare dso_local i32 @IntRegister(i64, void (...)*) #1

declare dso_local i32 @IntEnable(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
